--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -15,9 +15,9 @@ jobs:
 
       - name: Setup Flutter SDK
         uses: flutter-actions/setup-flutter@v3
-        with:
-          channel: stable
-          version: 3.0.2
+        # with:
+        #   channel: stable
+        #   version: 3.0.2
 
       - name: Install dependencies
         run: flutter pub get
