--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ environment:
   sdk: '>=3.4.0 <4.0.0'
 
 dependencies:
+  firebase_core: ^2.32.0
   flutter:
     sdk: flutter
   flutter_localizations:
